syntax = "proto3";

package org.example.grpc;

option java_multiple_files = true;
option java_package = "org.example.grpc.user";
option java_outer_classname = "UserServiceProto";

service UserService {
  
  rpc GetUserById(GetUserByIdRequest) returns (UserDto);
}


message GetUserByIdRequest {
  string user_id = 1; 
}


message UserDto {
  string id = 1;           
  string username = 2;     
  string email = 3;        
  string first_name = 4;   
  string last_name = 5;    
}